@@ -37,5 +37,3 @@ esac
 #DEBHELPER#
 
 exit 0
-
-
