@@ -35,5 +35,3 @@ esac
 #DEBHELPER#
 
 exit 0
-
-
