@@ -36,5 +36,3 @@ esac
 #DEBHELPER#
 
 exit 0
-
-
