@@ -14,5 +14,5 @@ Description: <insert up to 60 chars description>
 
 Package: #PACKAGE#-doc
 Architecture: all
-Description: Documentation for #PACKAGE#
+Description: documentation for #PACKAGE#
  <insert long description, indented with spaces>
