@@ -25,7 +25,7 @@ License:
 On Debian systems, the complete text of the Artistic License
 can be found in `/usr/share/common-licenses/Artistic'.
 
-The Debian packaging is (C) #YEAR#, #USERNAME# <#EMAIL#> and
+The Debian packaging is copyright #YEAR#, #USERNAME# <#EMAIL#> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
 
 
