@@ -17,7 +17,7 @@ License:
 
     <Put the license of the package here indented by 4 spaces>
 
-The Debian packaging is (C) #YEAR#, #USERNAME# <#EMAIL#> and
+The Debian packaging is copyright #YEAR#, #USERNAME# <#EMAIL#> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
 
 # Please also look if there are files or directories which have a
