@@ -34,7 +34,7 @@ On Debian systems, the complete text of the BSD License can be
 found in `/usr/share/common-licenses/BSD'.
 
 
-The Debian packaging is (C) #YEAR#, #USERNAME# <#EMAIL#> and
+The Debian packaging is copyright #YEAR#, #USERNAME# <#EMAIL#> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
 
 
