@@ -32,7 +32,7 @@ License:
 On Debian systems, the complete text of the GNU General
 Public License can be found in `/usr/share/common-licenses/GPL'.
 
-The Debian packaging is (C) #YEAR#, #USERNAME# <#EMAIL#> and
+The Debian packaging is copyright #YEAR#, #USERNAME# <#EMAIL#> and
 is licensed under the GPL, see above.
 
 
