@@ -32,8 +32,9 @@ License:
 On Debian systems, the complete text of the GNU Lesser General
 Public License can be found in `/usr/share/common-licenses/LGPL'.
 
-The Debian packaging is (C) #YEAR#, #USERNAME# <#EMAIL#> and
+The Debian packaging is copyright #YEAR#, #USERNAME# <#EMAIL#> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
+
 
 # Please also look if there are files or directories which have a
 # different copyright/license attached and list them here.
