@@ -3,4 +3,3 @@
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
  -- #USERNAME# <#EMAIL#>  #DATE#
-
